charon/tests/ui/generic-associated-types.out
error: Generic associated types are not supported
 --> tests/ui/generic-associated-types.rs:5:5
  |
5 |     type Item<'a>
  |     ^^^^^^^^^^^^^
  |

error: Item `test_crate::LendingIterator` caused errors; ignoring.
 --> tests/ui/generic-associated-types.rs:4:1
  |
4 | pub trait LendingIterator {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |

error: Found unsupported GAT `Item` when resolving trait `core::marker::Sized<Self::Item>`
 --> tests/ui/generic-associated-types.rs:9:5
  |
9 |     fn next<'a>(&'a mut self) -> Option<Self::Item<'a>>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

error: Error during trait resolution: Found unsupported GAT `Item` when resolving trait `core::marker::Sized<Self::Item>`
 --> tests/ui/generic-associated-types.rs:9:5
  |
9 |     fn next<'a>(&'a mut self) -> Option<Self::Item<'a>>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

error: Found unsupported GAT `Item` when resolving trait `core::marker::Sized<@TraitClause2::Item>`
  --> tests/ui/generic-associated-types.rs:29:28
   |
29 |     while let Some(item) = iter.next() {
   |                            ^^^^^^^^^^^
   |

error: Error during trait resolution: Found unsupported GAT `Item` when resolving trait `core::marker::Sized<@TraitClause2::Item>`
  --> tests/ui/generic-associated-types.rs:29:28
   |
29 |     while let Some(item) = iter.next() {
   |                            ^^^^^^^^^^^
   |

warning: unused variable: `x`
  --> tests/ui/generic-associated-types.rs:35:9
   |
35 |     let x = 42;
   |         ^ help: if this is intentional, prefix it with an underscore: `_x`
   |
   = note: `#[warn(unused_variables)]` on by default

error: Generic associated types are not supported
  --> tests/ui/generic-associated-types.rs:48:9
   |
48 |         type Type<'b>: for<'c> Foo<&'a &'b &'c ()>;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

error: Item `test_crate::lifetimes::Bar` caused errors; ignoring.
  --> tests/ui/generic-associated-types.rs:47:5
   |
47 |     pub trait Bar<'a> {
   |     ^^^^^^^^^^^^^^^^^
   |

error: Found unsupported GAT `Type` when resolving trait `test_crate::lifetimes::Foo<@TraitClause1::Type, &'_ (&'_ (&'_ (())))>`
  --> tests/ui/generic-associated-types.rs:55:9
   |
55 |         x.foo()
   |         ^^^^^^^
   |

error: Error during trait resolution: Found unsupported GAT `Type` when resolving trait `test_crate::lifetimes::Foo<@TraitClause1::Type, &'_ (&'_ (&'_ (())))>`
  --> tests/ui/generic-associated-types.rs:55:9
   |
55 |         x.foo()
   |         ^^^^^^^
   |

warning: 1 warning emitted

ERROR The extraction generated 10 errors
